      'request' was not set correctly if 'object' is not specified.

    - CMFCore.exportimport.typeinfo:  Added BBB support for really old
      typeinfo instances which still return mappings instead of ActionInfos.

    - standard_error_message.pt was out of sync with Zope.
      (http://www.zope.org/Collectors/Zope/2133)


CMF 2.0.0 (2006/04/16)

  New Features

    - CMFCalendar.CalendarTool: The first day of the week preference can
      now be set on the calendar tool through the ZMI.
      (http://www.zope.org/Collectors/CMF/400)

    - CMFCalendar: Added experimental Zope 3-style browser views.
      The views are disabled by default. See README.txt of the browser
      sub-package for further information.

  Bug Fixes

    - IndexableObjectWrapper: Fixed list of provided interfaces.
      The interfaces declared for the wrapped object are no longer masked.

    - CMFDefault: Removed CMF specific slots from five_template.
      The CMF specific slots added in CMF 2.0.0-alpha have been removed again
      from the five_template.

  Others

    - CalendarTool: Slightly modified the behavior of getUseSession.
      This method now explicitly returns a boolean value.

    - Skins, views and FSSTXMethod: Removed 'Desktop' class div tags.
      There is still the 'Desktop' ID div tag in main_template.


CMF 2.0.0-beta2 (2006/03/26)

  Bug Fixes

    - CMFDefault: Refactored slots in five_template and main_template.
      main_template has now a new 'body' slot that wraps around 'header' and
      'main' slot. main_template's 'header' slot is now empty by default.

    - PortalFolder: Content IDs starting with '@@' are now disallowed.
      These names are reserved for browser views.

    - CMFDefault: Changed the way browser views are hooked up.
      To become independent of the lookup order views are now named different
      than the corresponding skin methods. The views are now enabled by
      default and hooked up by a new extension profile.

  Others
